# py_ab

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  README.md  mypy.ini  pyproject.toml
.github/workflows/: ci-checks.yml
doc_source/: conf.py  index.rst
docs/: Makefile  ab_background.rst  conf.py  experiment_format.rst  grammar.rst  index.rst
release/: .bumpversion.cfg  Makefile
source/: readme.rst
src/: test.ipynb
src/ab_tester/language/: lexer.py
src/pyab_experiment/: __init__.py  experiment_evaluator.py  parser.py
src/pyab_experiment/binning/: binning.py
src/pyab_experiment/codegen/: __init__.py  codegen_playgroubd.ipynb  python_generator.py
src/pyab_experiment/data_structures/: syntax_tree.py
src/pyab_experiment/language/: README.md  README.rst  __init__.py  grammar.py  lexer.py
src/pyab_experiment/sly/: README.md  __init__.py  ast.py  docparse.py  lex.py  yacc.py
src/pyab_experiment/utils/: custom_operators.py  stats.py  wraper_functions.py
src/pyab_tester/language/: grammar.py  lexer.py
src/sample_experiments/: sample.pyab  sample_with_tuple.pyab
src/tests/unit/: test_experiment_codegen.py  test_experiment_evaluator.py  test_experiment_files.py  test_experiment_grammar.py  test_experiment_lexer.py
tests/unit/: test_ab_deterministic_choice.py  test_experiment_evaluator.py  test_experiment_files.py  test_field_comparison.py  test_unroutable_conditional.py
tests/unit/test_programs/: basic_experiment.pyab  basic_experiment_recompiled.pyab  comments.pyab  conditional.pyab  conditional_test_1.pyab  salt.pyab  (+7 more)
(+9 files in other folders)
