[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "py-ab-experiment"
version = "0.1.0"
description = "Pythonic AB Experiment Framework"
authors = ["gus-fr <gustavo_frigo@hotmail.com>"]
readme = "README.md"
repository = "https://github.com/gus-fr/py_ab"
license = "GPL-3.0-or-later"
packages = [
    {include = "pyab_experiment", from = "src"}
]

[tool.poetry.dependencies]
python = "^3.10"
black = "^24.2.0"
pydantic = "^1.10.0"
sly = "0.5"

[tool.pytest.ini_options]
pythonpath = [
  ".", "src",
]